modules/vpc/main.tf
resource "aws_vpc" "this" {
  cidr_block = var.vpc_cidr
  enable_dns_hostnames = true
}

resource "aws_subnet" "public" {
    count = 2
    vpc_id = aws_vpc.this.id
    cidr_block = var.public_subnets[count.index]
    availability_zone = "${var.region}${count.index == 0 ? "a" : "b"}"
    map_public_ip_on_launch = true 
}

resource "aws_subnet" "private" {
    count = 2
    vpc_id = aws_vpc.this
    cidr_block = var.private_subnets[count.index]
    availability_zone = "${var.region}${count.index == 0 ? "a" : "b"}"
}
